--- a/BrickPlanet/clothingcreations.html
+++ b/BrickPlanet/clothingcreations.html
@@ -1,5 +1,5 @@
 <title>Clothing Creations</title>
 
 <hr><br><br><center><font size="7" color="green">Exciting new Clothing Coming Soon!</center><br></font><hr><br><br>
-<center><img src="clothingcreation.png"></center><br><br><br>
+<center><img src="clothingcreation.png" height="400px"></center><br><br><br>
 <font size="5"><b>Introducing the <font color="red">R</font><font color="#bdc462">a</font><font color="green">i</font><font color="lightblue">n</font><font color="blue">b</font><font color="purple">o</font><font color="orange">w</font> and  <font color="darkgrey">Grey </font><font color="aqua">Aqua</font> Hoodies!</b></font>
